fix: small changes to main notebook

--- a/workshop_notebook.ipynb
+++ b/workshop_notebook.ipynb
@@ -635,7 +635,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The MapNode"
+    "### The MapNode"
    ]
   },
   {
@@ -1126,6 +1126,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Substitutions: change ugly filenames"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 85,
    "metadata": {
@@ -1371,7 +1378,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Write a function node and connect this to your preprocessing workflow"
+    "### Problems:\n",
+    "\n",
+    "1. Write a function node and connect this to your preprocessing workflow"
    ]
   },
   {
